--- a/q/274209.html
+++ b/q/274209.html
@@ -26,20 +26,30 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>037</td><td>Python 3</td><td>240717T141641Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274211#274211">Jitse</a></td></tr>
-<tr d-ix="1"><td>040</td><td>R</td><td>240717T152918Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274215#274215">Dominic </a></td></tr>
-<tr d-ix="2"><td>009</td><td>05AB1E</td><td>240718T064459Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274233#274233">Kevin Cr</a></td></tr>
-<tr d-ix="3"><td>030</td><td>JavaScript Node.js</td><td>240718T032003Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274229#274229">l4m2</a></td></tr>
-<tr d-ix="4"><td>075</td><td>Go</td><td>240718T005925Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274224#274224">bigyihsu</a></td></tr>
-<tr d-ix="5"><td>009</td><td>MATL</td><td>240717T162439Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274218#274218">Luis Men</a></td></tr>
-<tr d-ix="6"><td>011</td><td>Charcoal</td><td>240717T213655Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274223#274223">Neil</a></td></tr>
-<tr d-ix="7"><td>030</td><td>JavaScript ES6</td><td>240717T160651Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274216#274216">Arnauld</a></td></tr>
-<tr d-ix="8"><td>036</td><td>APL+WIN</td><td>240717T182357Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274220#274220">Graham</a></td></tr>
-<tr d-ix="9"><td>054</td><td>Bash</td><td>240717T151013Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274214#274214">Themooni</a></td></tr>
+<tr d-ix="0"><td>044</td><td>Bash</td><td>240717T151013Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274214#274214">Themooni</a></td></tr>
+<tr d-ix="1"><td>037</td><td>Python 3</td><td>240717T141641Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274211#274211">Jitse</a></td></tr>
+<tr d-ix="2"><td>040</td><td>R</td><td>240717T152918Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274215#274215">Dominic </a></td></tr>
+<tr d-ix="3"><td>009</td><td>05AB1E</td><td>240718T064459Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274233#274233">Kevin Cr</a></td></tr>
+<tr d-ix="4"><td>030</td><td>JavaScript Node.js</td><td>240718T032003Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274229#274229">l4m2</a></td></tr>
+<tr d-ix="5"><td>075</td><td>Go</td><td>240718T005925Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274224#274224">bigyihsu</a></td></tr>
+<tr d-ix="6"><td>009</td><td>MATL</td><td>240717T162439Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274218#274218">Luis Men</a></td></tr>
+<tr d-ix="7"><td>011</td><td>Charcoal</td><td>240717T213655Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274223#274223">Neil</a></td></tr>
+<tr d-ix="8"><td>030</td><td>JavaScript ES6</td><td>240717T160651Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274216#274216">Arnauld</a></td></tr>
+<tr d-ix="9"><td>036</td><td>APL+WIN</td><td>240717T182357Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274220#274220">Graham</a></td></tr>
 <tr d-ix="10"><td>007</td><td>Vyxal</td><td>240717T140602Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274210#274210">lyxal</a></td></tr>
 <tr d-ix="11"><td>008</td><td>Jelly</td><td>240717T141820Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274212#274212">hyper-ne</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 37 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, <s>54</s> 44 bytes</h1>
+<p>-10 bytes by Dominic van Essen and GammaFunction</p>
+<pre class="lang-bash prettyprint-override"><code>(($1%128%127&gt;31))&amp;&amp;((($1&lt;128))||$0 $[$1&gt;&gt;7])
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=TdExbsMgFAZgdc0p3uBaoCoSPxg_HFW-SJQhrWpFyuAh6eZrdOriIT1Uc5oYiB4eLGQ-EPw_v7eP4-U03wal1d_3ddiG_zelKrzChuXj3kHrulZx7n2Z03qaBqr2FfqeDzpvub_86M3X52kk7DYDGZomyr80njPYCJZFrIiL4izVdRYn0kTxnUgj4qMEFvEibRTYVqgV4kzlDiwUMgUSC2Jdup8pobqF6BnXpFjWoEQ2shOpDc-rcCiNIFUCz6aF46YsKdXArZf4ckbpCKkkuIYBg1Xzsaz8OvOcxwc" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><s><a href="https://ato.pxeger.com/run?1=TdGxbsMgEAZgdc1T3JAgGCLxg_HhKvK7pFWtSB0ytN38Gp26eEgeqn2aGi46POHTB4L_98_t5fxxWW6Tdfb-9Tkd82-ydo8DQh4jjJHPEwI7Z4wttg7ZuXmeaF_GcVzJyeG_p2-3e3u9XAnPu4k8zTPJSNd3gVAgsEpQiUViIGNEokpXJA0qnUoqklklqfRFEHqlXomF2htYKQtlUstqQ32fb6GGlegR19dYwaNF9noStY3Em3BojaBWgsS-R-SubWnVIG63pHZH6wi1JMSOAY9N86Us-TvLIus_" rel="nofollow noreferrer">54 bytes</a></s></p>
+<p>Use as a bash script. Takes in number as first argument, returns with 1 for false and 0 for true (bash convention).<br />
+ATO link assumes the function is named <code>f</code> because $0 doesn't work in ATO, but the penalty for hardcoding the script name would be a single byte, so the score would be the same.</p>
+<p>Turns out this is a port of <a href="https://codegolf.stackexchange.com/a/274211/88192">@Jitse's answer</a>, but i came up with it independently.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 37 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda n:n&gt;&gt;7&gt;0&lt;f(n&gt;&gt;7)or-~n%128&lt;33
 </code></pre>
@@ -49,13 +59,13 @@
 -2 bytes thanks to squareroot12621
 -2 bytes thanks to Albert.Lang</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>44</s> <s>43</s> 40 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>44</s> <s>43</s> 40 bytes</h1>
 <p><em>Edit: -3 bytes thanks to pajonk</em></p>
 <pre class="lang-r prettyprint-override"><code>f=\(x)(x+1)%%128&gt;31&amp;(!(y=x%/%128)||f(y))
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMGCpaUlaboWNzXSbGM0KjQ1KrQNNVVVDY0s7IwN1TQUNSptK1T1QXzNmpo0jUpNTYj6W4x5aRoGmgrKCrq6dgppiTnFqQoajyY0aHKlaRiZY4jPBokbG8HES4pKwcILQMKmlqjC1iBBC3NUwXCQoKGRGapoHUQU076FEAkLDIlGqBuNDTAd36QDdr2RgSGG1MRHE2aC3WqO7gmdFLBVxibmhoYGhuiGOjyaMO_RhN4ksBpTcwMzQ2NzE1QDvIoU65ClTdGMAMqD_AMJdlh0AQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 9 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 9 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>žQÇIžyвåP
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f//6L7Aw@2eR/dVXth0eGnA//@GpuYGZobG5qYA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKS/f@j@wIPt1ce3Vd5YdPhpQH/df5HG@gYmesYG@mYWupYmOsYGpkBMYi20DE2AMoZGRjqmJoD5Q2NTcwNDQ0MDXQMTc0NzAyNzU3gLNNYAA" rel="nofollow noreferrer">verify all test cases</a>.</p>
@@ -70,7 +80,7 @@
            # (which is output implicitly as result)
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 30 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 30 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=n=&gt;-~n%128&lt;33?n&lt;!!n:f(n/128)
 </code></pre>
@@ -83,14 +93,14 @@
 <p><a href="https://tio.run/##ddDLDsFAFMbxvaeohUybFHNRU7ey9gLWRSukmUqLZYO9pJYiEV6tL1KXkKhzzPqXL3P@C3fjxpNovlxVVTj18tzvqZ5TTVSFcbsrRL@s2r6uHEca@SRUcRh4tSCc6b5OKNHezzC0el3z3SD2ND1Lt0bph3JJcHoGVPAiXUXrl7wCabUw2QHOlpgbAcd4k0CXIE4S9JgbQm2c7rBKglJc701YlFNGMHvM0hNMJT9Zv08zp/DDoiEZo4ySwuwgSy9ZehhDb0naZEI2yPfwMConf6lVnH7YZ7n8Dg" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Worse input</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, 75 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, 75 bytes</h1>
 <pre class="lang-go prettyprint-override"><code>func f(n int)bool{for k:=n;k&gt;0;k&gt;&gt;=7{if -^k%128&lt;33{return 0&gt;1}}
 return n&gt;0}
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=TVFLasMwEKVbnWJqCNjgBMmOozSpDIV2VSil9a4_XGMF40Q2jhxahI_RVTeh0EP0KO1pKtnB8UKaN6OZ92ZGn1-rYv9Txkker1LYxJlA2aYsKjmx-EZa37Xk4_nvNa9FAtwWkAnpvBbFWvGignzBxDIPsT4hoyrjMH7OR8Sbn_u-qlJZVwJwSJoGHRwR4qaj_Dv5kO9lChFsZVUnElQmSsO-hPStBCPRINTKmqZsBxSSW1gweHiKFFLY5fF6mzYuUh49Yt9zNV0Lg7MezmkPiTcb4EGl7npAg4f8HiZHL6ADDeJPKSGYDLJJQPGM-HR6TDpEgj5JT3Zb6VnXwrYYY_fRxV2kreUgs9UXV5o5q1joH9EzKxQnbYTbcqK35CC9aDkxazplYN4UtHTctkY7YCHo2x7tnEdhudCWuCbN7YocaHQDQ324urmETv_wO_t9Z_8B" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Based on <a href="https://codegolf.stackexchange.com/a/274211/77309">@Jitse's answer</a>.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, <s>10</s> 9 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, <s>10</s> 9 bytes</h1>
 <pre><code>7W_YA6Y2m
 </code></pre>
 <p>Outputs a vector of ones, which is <a href="https://codegolf.stackexchange.com/a/95057/36398">truthy</a>, or a vector containing at least a zero, which is <a href="https://codegolf.stackexchange.com/a/95057/36398">falsy</a>, depending on whether the result only uses printable ASCII or not.</p>
@@ -104,7 +114,7 @@ m     % Ismember (element-wise)
       % Implicit display
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 11 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 11 bytes</h1>
 <pre><code>⌊⍘Ｎ⭆¹²⁸№γ℅ι
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMM3My8ztzRXwymxODW4BCiUruGZV1Ba4leam5RapKGpowAR9U0s0DA0stBRcM4vBWpLBzKAJiUmlwAVZWqCgfX//4am5gZmhsbmJv91y3IA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Actually outputs <code>1</code> or <code>0</code> for once. Explanation:</p>
@@ -134,7 +144,7 @@ m     % Ismember (element-wise)
             Implicitly print
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1>JavaScript (ES6), 30 bytes</h1>
+<div id="pu8" class="pu"><h1>JavaScript (ES6), 30 bytes</h1>
 <p>Very similar to <a href="https://codegolf.stackexchange.com/a/274211/58563">Jitse's answer</a>.</p>
 <p>Returns <strong>0</strong> for <em>printable</em> or <strong>true</strong> for <em>non-printable</em>.</p>
 
@@ -143,19 +153,11 @@ m     % Ismember (element-wise)
 <p><a href="https://tio.run/##ddBNC4IwHMfxe6/CDsUGlXtIZ5TSuTfQ2UqjkC3UOolU98COEUS9Nd/IeqBDurXzhx/7f9f@zk/m8WqTdrlYBFKGLne9bs5bmDgjSrMMcM9zGWy3Q8ChnAueiCjoRWIJQoCM74PQME0j9KMkMEBZ7GGjCgnTw2sdUlKBabz9uHvdWQONG9aVwzRqWleY2KrKVcW0JzxU6GjhQdOFIqS1x45SkCCsk@eyuChx2Dfj70GdhfJR2mcYI4wqk@OyuJXFaaZoiyEbU9b/HZ3EzfwftCqzL/luJZ8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Or <strong><a href="https://tio.run/##ddBNC4IwHMfxe69iHYItKvegzSilc2@gs5lGITO0OolU98COEUS9Nd/IeqBDurXzhx/7f1fezkv9ZLnedEU8D6QMHeG43Vy0CLVHjGUZFK7rcNQOoUDSj0UaR0EvihcwhBh8H0LAMEDoRWkAYFnsUaMKKdfDax0yWoGbZPtx97qzBho3rCuba9S0rgjtqypXFdee8FChrYUHTReGsdYeO0pBiolOnsviosTh34y/B3XmykeZyQnBBFcmx2VxK4vTTNEWx33CuPk7Okma@T9oVWZf8t1KPgE" rel="nofollow noreferrer">29 bytes</a></strong> with <strong>0</strong> for <em>printable</em> / <strong><em>truthy</em></strong> for <em>non-printable</em>.</p>
 </div>
-<div id="pu8" class="pu"><h1>APL+WIN, 36 bytes</h1>
+<div id="pu9" class="pu"><h1>APL+WIN, 36 bytes</h1>
 <p>Prompts for integer. Index origin=0. 1=true, 0=false</p>
 <pre><code>(+/v∊32+⍳95)=⍴v←((⌈128⍟2⌈n)⍴128)⊤n←⎕
 </code></pre>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlwPWooz3tv4a2ftmjji5jI@1HvZstTTVtH/VuKQNKa2g86ukwNLJ41DvfCMjK0wSKA7maj7qW5AGlgab8B@rn@p/GZcAFwUbmQMLYCEiYWgIJCxDX0MgMTELYFiAFBmC1RgaGIIXmYPWGxibmhoYGhiAZQ1NzAzNDY3MTJLYpAA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
-</div>
-<div id="pu9" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 54 bytes</h1>
-<pre class="lang-bash prettyprint-override"><code>(($1%128&gt;31&amp;&amp;$1%128&lt;127))&amp;&amp;((($1&lt;128))||$0 $(($1&gt;&gt;7)))
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=TdGxbsMgEAZgdc1T3JAgGCLxg_HhKvK7pFWtSB0ytN38Gp26eEgeqn2aGi46POHTB4L_98_t5fxxWW6Tdfb-9Tkd82-ydo8DQh4jjJHPEwI7Z4wttg7ZuXmeaF_GcVzJyeG_p2-3e3u9XAnPu4k8zTPJSNd3gVAgsEpQiUViIGNEokpXJA0qnUoqklklqfRFEHqlXomF2htYKQtlUstqQ32fb6GGlegR19dYwaNF9noStY3Em3BojaBWgsS-R-SubWnVIG63pHZH6wi1JMSOAY9N86Us-TvLIus_" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Use as a bash script. Takes in number as first argument, returns with 1 for false and 0 for true (bash convention).<br />
-ATO link assumes the function is named <code>f</code> because $0 doesn't work in ATO, but the penalty for hardcoding the script name would be a single byte, so the score would be the same.</p>
-<p>Turns out this is a port of <a href="https://codegolf.stackexchange.com/a/274211/88192">@Jitse's answer</a>, but i came up with it independently.</p>
 </div>
 <div id="pu10" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 7 bytes</h1>
 <pre><code>₇τCkQF¬
