--- a/q/274225.html
+++ b/q/274225.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>140</td><td>Python 3</td><td>240718T071207Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274237#274237">Jitse</a></td></tr>
+<tr d-ix="0"><td>111</td><td>Python 3.8 prerelease</td><td>240718T071207Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274237#274237">Jitse</a></td></tr>
 <tr d-ix="1"><td>008</td><td>05AB1E</td><td>240718T065430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274235#274235">Kevin Cr</a></td></tr>
 <tr d-ix="2"><td>099</td><td>JavaScript ES6</td><td>240718T064538Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274234#274234">Arnauld</a></td></tr>
 <tr d-ix="3"><td>085</td><td>R</td><td>240718T061307Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274232#274232">pajonk</a></td></tr>
@@ -34,11 +34,11 @@
 <tr d-ix="5"><td>055</td><td>Factor + math.combinatorics</td><td>240718T020251Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274227#274227">chunes</a></td></tr>
 <tr d-ix="6"><td>006</td><td>Vyxal</td><td>240718T013914Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274226#274226">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 140 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 111 bytes</h1>
 
-<pre class="lang-python prettyprint-override"><code>f=lambda a,e=enumerate:a and[min([[x]+y for i,x in e(a)for y in f(a[:i]+a[i+1:])],key=lambda b:max(abs(sum(b[:j+1]))for j,_ in e(b)))]or[[]]
+<pre class="lang-python prettyprint-override"><code>f=lambda a:a and min(([x]+f(a[:i]+a[i+1:])for i,x in enumerate(a)),key=lambda b,x=0:max(abs(x:=x+i)for i in b))
 </code></pre>
-<p><a href="https://tio.run/##NY5Ra4QwEITf71fs46aupVYPjoCF/o4QyoqRy9UkEmOrv95Gjz7Ozsy3M23pHny970M7sut6BibTGr84EzkZmbXvlbMelVp1scEQIlhawXowyOKQ2yEGZCWtLljZopJaaPo22z@zk45X5G7GeXHYKfkoKi3O8oO@nqxOCKFDVErr/TCY4OW0HE84p/g6T6NNBGEyHt@EkBeAKVqfcEDzw2MeI8SuKnqnmhq6amg/AD/9BiH2JoqLKq9UNnQGTvPM5ktNZU5j/hnS3USYw7gkG/wMvzbdIbMXA/UBuFHzbDZU3vQf" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##NY3BboMwEETv@Yo9rstSJYVIyBKR8h0WqhZhhFWwLWMa8/UUiHrYw87Mm/FrHJwtKh@2ra9HntqOgeV@toPJWESVmqxHVtI0GSuT3WQjehfAUAJjQdtl0oGjRhaCfvT6X9JSqq9y4oTczphknTLzBg@sFWI7Hib4@D6EiT3OMXzOfjSRwHlt8SqEvAD4YGzEHvUvj8eK2NSNvqigku4N1A/Ap13BhU4HcVH5nfKSzsBpntldKSjf07hvujjoALMbl2icneFl4gB796KhOAoqKt9kSXnV/AE" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 8 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>œΣηOÄà}н
