--- a/q/274225.html
+++ b/q/274225.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>007</td><td>Jelly</td><td>240718T104737Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274240#274240">Jonathan</a></td></tr>
+<tr d-ix="0"><td>008</td><td>Jelly</td><td>240718T104737Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274240#274240">Jonathan</a></td></tr>
 <tr d-ix="1"><td>099</td><td>JavaScript ES6</td><td>240718T064538Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274234#274234">Arnauld</a></td></tr>
 <tr d-ix="2"><td>051</td><td>Charcoal</td><td>240718T083302Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274238#274238">Neil</a></td></tr>
 <tr d-ix="3"><td>104</td><td>Python 3.8 prerelease</td><td>240718T071207Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274237#274237">Jitse</a></td></tr>
@@ -36,20 +36,20 @@
 <tr d-ix="7"><td>055</td><td>Factor + math.combinatorics</td><td>240718T020251Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274227#274227">chunes</a></td></tr>
 <tr d-ix="8"><td>006</td><td>Vyxal</td><td>240718T013914Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274226#274226">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 7 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 8 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>Œ!ÄA$ÞḢ
 </code></pre>
 <p>A monadic Link that accepts a list of integers and yields one with the minimal maximum absolute prefix sum.</p>
-<p><strong><a href="https://tio.run/##y0rNyan8///oJMXDLY4qh@c93LHo////0bqmOromOoY6RjrGsQA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
+<p><strong><a href="https://tio.run/##y0rNyan8///oJMXDLY4PdzYc6zo87@GORf///4/WtdRRMNFRAJK6ZrEA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
 <h3>How?</h3>
-<p>Find a permutation with minimal absolute prefix sums (which is necessarily one of the permutations with a minimal maximum absolute prefix sum).</p>
-<pre><code>Œ!ÄA$ÞḢ - Link: list of integers, A
-Œ!      - all permutations of A
-     Þ  - sort by:
-    $   -   last two links as a monad:
-  Ä     -     cumulative sums
-   A    -     absolute value (vectorises)
-      Ḣ - head
+<pre><code>Œ!ÄAṀƊÞḢ - Link: list of integers, A
+Œ!       - all permutations of A
+      Þ  - sort by:
+     Ɗ   -   last three links as a monad:
+  Ä      -     cumulative sums
+   A     -     absolute value (vectorises)
+    Ṁ    -     maximum
+       Ḣ - head
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1>JavaScript (ES6), 99 bytes</h1>
