--- a/q/204969.html
+++ b/q/204969.html
@@ -26,16 +26,16 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>057</td><td>Swift</td><td>240301T182831Z</td><td><a href="https://codegolf.stackexchange.com/questions/204969/write-a-microwave-timer/271467#271467">macOSist</a></td></tr>
-<tr d-ix="1"><td>nan</td><td>AWK</td><td>240302T220211Z</td><td><a href="https://codegolf.stackexchange.com/questions/204969/write-a-microwave-timer/271488#271488">cnamejj</a></td></tr>
-<tr d-ix="2"><td>1575</td><td>Nibbles</td><td>240303T035526Z</td><td><a href="https://codegolf.stackexchange.com/questions/204969/write-a-microwave-timer/271491#271491">Mike Buf</a></td></tr>
-<tr d-ix="3"><td>059</td><td>PARI/GP</td><td>240302T105854Z</td><td><a href="https://codegolf.stackexchange.com/questions/204969/write-a-microwave-timer/271479#271479">138 Aspe</a></td></tr>
-<tr d-ix="4"><td>043</td><td>YASEPL</td><td>240226T183740Z</td><td><a href="https://codegolf.stackexchange.com/questions/204969/write-a-microwave-timer/271324#271324">madeforl</a></td></tr>
-<tr d-ix="5"><td>092</td><td>Go 1.21+</td><td>230808T194649Z</td><td><a href="https://codegolf.stackexchange.com/questions/204969/write-a-microwave-timer/263896#263896">bigyihsu</a></td></tr>
+<tr d-ix="0"><td>089</td><td>Go 1.21+</td><td>230808T194649Z</td><td><a href="https://codegolf.stackexchange.com/questions/204969/write-a-microwave-timer/263896#263896">bigyihsu</a></td></tr>
+<tr d-ix="1"><td>057</td><td>Swift</td><td>240301T182831Z</td><td><a href="https://codegolf.stackexchange.com/questions/204969/write-a-microwave-timer/271467#271467">macOSist</a></td></tr>
+<tr d-ix="2"><td>nan</td><td>AWK</td><td>240302T220211Z</td><td><a href="https://codegolf.stackexchange.com/questions/204969/write-a-microwave-timer/271488#271488">cnamejj</a></td></tr>
+<tr d-ix="3"><td>1575</td><td>Nibbles</td><td>240303T035526Z</td><td><a href="https://codegolf.stackexchange.com/questions/204969/write-a-microwave-timer/271491#271491">Mike Buf</a></td></tr>
+<tr d-ix="4"><td>059</td><td>PARI/GP</td><td>240302T105854Z</td><td><a href="https://codegolf.stackexchange.com/questions/204969/write-a-microwave-timer/271479#271479">138 Aspe</a></td></tr>
+<tr d-ix="5"><td>043</td><td>YASEPL</td><td>240226T183740Z</td><td><a href="https://codegolf.stackexchange.com/questions/204969/write-a-microwave-timer/271324#271324">madeforl</a></td></tr>
 <tr d-ix="6"><td>015</td><td>Itr</td><td>230813T183348Z</td><td><a href="https://codegolf.stackexchange.com/questions/204969/write-a-microwave-timer/264128#264128">bsoelch</a></td></tr>
 <tr d-ix="7"><td>031</td><td>ARBLE</td><td>230816T053009Z</td><td><a href="https://codegolf.stackexchange.com/questions/204969/write-a-microwave-timer/264231#264231">ATaco</a></td></tr>
 <tr d-ix="8"><td>043</td><td>Desmos</td><td>230816T051341Z</td><td><a href="https://codegolf.stackexchange.com/questions/204969/write-a-microwave-timer/264230#264230">fwoosh</a></td></tr>
-<tr d-ix="9"><td>095</td><td>Python</td><td>230813T172445Z</td><td><a href="https://codegolf.stackexchange.com/questions/204969/write-a-microwave-timer/264126#264126">PronetAI</a></td></tr>
+<tr d-ix="9"><td>095</td><td>Python</td><td>230813T172445Z</td><td><a href="https://codegolf.stackexchange.com/questions/204969/write-a-microwave-timer/264126#264126">user1190</a></td></tr>
 <tr d-ix="10"><td>035</td><td>Pure Bash</td><td>230813T182644Z</td><td><a href="https://codegolf.stackexchange.com/questions/204969/write-a-microwave-timer/264127#264127">F. Hauri</a></td></tr>
 <tr d-ix="11"><td>010</td><td>Thunno 2</td><td>230718T101403Z</td><td><a href="https://codegolf.stackexchange.com/questions/204969/write-a-microwave-timer/262962#262962">The Thon</a></td></tr>
 <tr d-ix="12"><td>061</td><td>Scala</td><td>200801T155656Z</td><td><a href="https://codegolf.stackexchange.com/questions/204969/write-a-microwave-timer/208939#208939">user</a></td></tr>
@@ -85,7 +85,18 @@
 <tr d-ix="56"><td>025</td><td>perl MListUtil=min plF E</td><td>200519T174705Z</td><td><a href="https://codegolf.stackexchange.com/questions/204969/write-a-microwave-timer/204981#204981">Abigail</a></td></tr>
 <tr d-ix="57"><td>2119</td><td>J</td><td>200519T173620Z</td><td><a href="https://codegolf.stackexchange.com/questions/204969/write-a-microwave-timer/204980#204980">Jonah</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Swift, <s>63</s> 57 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go 1.21+</a>, <s>93</s> <s>92</s> 89 bytes</h1>
+<pre class="lang-go prettyprint-override"><code>import.&quot;fmt&quot;
+func f(t string)int{m,s:=0,0
+Sscanf(t,&quot;%d:%d&quot;,&amp;m,&amp;s)
+return min(6e3,m*60+s)}
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=TZDPSsQwEIfxmqcYA10ajUvWxWArEQW9irh7ERUp_bMEN9nSTEEofRIvRfDmC-nTmLa7sqfwy8zk-zIfn6tN910m6VuyysEk2n7VWJyc_zxqU24qnNLCICVFbVMoQgSHlbYrpi02hrtYCS7IwqWJ9UVOgywOMsonhk8cI1WOdWXBaBvKfM7NkRTHjrUj4Pfgani0R4YMGoK5QwexgqcXD6lTbLQt6x3xAvL3Mk8xz8Cz24Y0VMziuaA8Ei3vk4ilpFzKMc3iKKJ8dhaN8TSe78UoGqpSiH62JeTeI3BtQ6qUWiyvH5b-pIwUmwpeOWJvVSXWL2iQbEiSYp2s-2v_bZwOoozoAnz49zxUsO1rYAAUIQ0cqEsIMgiDjD1bymE3zrfNfP8NBq3X27eD27sbGO22i-y68fwD" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<ul>
+<li>-3 by using <code>:=</code> instead of <code>var</code>.</li>
+</ul>
+</div>
+<div id="pu1" class="pu"><h1>Swift, <s>63</s> 57 bytes</h1>
 <pre class="lang-swift prettyprint-override"><code>{min(Int(($0+&quot;&quot;).prefix(2))!*60+Int($0.suffix(2))!,6000)}
 </code></pre>
 <p>Assign this closure to something and call it with the time in <code>&quot;##:##&quot;</code> format (or just call it directly).</p>
@@ -93,7 +104,7 @@
 <p>Since a Swift <code>String</code> can't be indexed using an <code>Int</code> (blame Unicode support, though you'd be surprised just how rare <code>String</code> indexing is in well-written, real-life code), I had to use the <code>prefix(_:)</code> and <code>suffix(_:)</code> methods instead.</p>
 </blockquote>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/gawk/manual/gawk.html" rel="nofollow noreferrer">AWK</a>, 30 bytes (27 bytes + 3 penalty for -F:)</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/gawk/manual/gawk.html" rel="nofollow noreferrer">AWK</a>, 30 bytes (27 bytes + 3 penalty for -F:)</h1>
 <pre><code>$0=6000&lt;(a=$1*60+$2)?6000:a
 </code></pre>
 <p><a href="https://tio.run/##SyzP/v9fxcDWzMDAwEYj0VbFUMvMQFvFSNMeJGKV@P@/paWVpfl/XTcrAA" rel="nofollow noreferrer" title="AWK – Try It Online">Try it online!</a></p>
@@ -102,7 +113,7 @@
 $0=6000&lt;(          )?6000:a  - ternary to cap limit at 6000
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 15 nibbles (7.5 bytes)</h1>
+<div id="pu3" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 15 nibbles (7.5 bytes)</h1>
 <pre><code>[6000+*60$;$
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m708LzMpKSe1eMGCpaUlaboWa6LNDAwMtLXMDFSsVSBCUJkFew0MrYwNuAwMrMzMuIBsS0suAyMrY0suS0sgG6IIAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -112,12 +123,12 @@ $0=6000&lt;(          )?6000:a  - ternary to cap limit at 6000
 [6000        # return lesser of sum and 6000
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 59 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 59 bytes</h1>
 <pre><code>f(x)={s=strsplit(x,&quot;:&quot;);min(60*eval(s[1])+eval(s[2]),6000)}
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m728ILEoMz69YMGCpaUlaboWN63TNCo0bauLbYtLiooLcjJLNCp0lKyUNK1zM_M0zAy0UssSczSKow1jNbWhTKNYTR0zAwMDzVqoEUnVXAVFmXklGmkaSgaGVsYGSpqa1khCBlZmZmhChlaWlmhCRlbGaEKWljBVUJtgjgYA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1>YASEPL, 43 bytes</h1>
+<div id="pu5" class="pu"><h1>YASEPL, 43 bytes</h1>
 <pre><code>=s=1'±colon!¥0,1*60=m¥1,1!+m}2,6000$6000`1&lt;
 </code></pre>
 <p>explanation:</p>
@@ -130,24 +141,6 @@ $0=6000&lt;(          )?6000:a  - ternary to cap limit at 6000
                             }2,6000$6000`1            if S &gt; 6000, set it to 6000
                                           &lt;           print S once done                                 
 </code></pre>
-</div>
-<div id="pu5" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go 1.21+</a>, <s>93</s> 92 bytes</h1>
-<pre class="lang-go prettyprint-override"><code>import.&quot;fmt&quot;
-func f(t string)int{var m,s int
-Sscanf(t,&quot;%d:%d&quot;,&amp;m,&amp;s)
-return min(6e3,m*60+s)}
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=TZDBSsQwEIbxmqcYAl1aTZeui8VWiq8geHRFQpuWsNu0JFMRQp_EyyJ484X0aUza7rKnyT-Tme-f-fxquuNPz8s9bwS0XKrvAev4_ncn277TuKZ1i5TUgyqhDhEMaqmaSCq071xDywy4N3k2JVeuzmhQ5UFF2aplKxMRLXDQClqpwlRsWXudJjcmGmfG39XjNNdTwwgsQWHQQF7Ay6vjDCVaqfrhBH0A8dGLEkXlkaMlliabfJtQliUj8yrJ05SyNJ3VJs8yyjZ32Sxv8-2FzLKpmiaJ7x0JqTsNbwzR4zVX7hiTG0t4iQM_-LTbD9eTo4jIGpw4GyoKWP5Z8uTM4kGFtNvTiIwgDkac0nVIpSo7rV1bDoGBOI6XtYqggqbzYacogxOKXXLYQnFjvefljsfjHP8B" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Uses the brand new builtin <code>min</code> function to save 13 bytes.</p>
-<h1><a href="https://go.dev" rel="nofollow noreferrer">Go 1.20.x</a>, <s>106</s> 104 bytes</h1>
-<pre class="lang-go prettyprint-override"><code>import.&quot;fmt&quot;
-func f(t string)int{var m,s int
-Sscanf(t,&quot;%d:%d&quot;,&amp;m,&amp;s)
-o:=m*60+s
-if o&gt;6e3{o=6e3}
-return o}
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=TZDBSsQwEIbxmqcYAl1aTZeui8VGqq8geFSR0qa17DYpyVSE0CfxsgjefCF9GpO2K3vJ5J_J5PtnPj4bdfjui3JXNAK6opVfA9bx9c9r2_VK45rWHVJSD7KEOkQwqFvZRK1E-1Zo6JgBdycPpiykqzMaVDyoKFt1bGUionjenafJhSFtDeo2FVurcneORAsctAQ1zrzfs7uJ4R2EEViCwqABnsPjs2MOJdpW9sPRwA2I916UKCqPHy2xNNnwbUJZlozMq4SnKWVpOqsNzzLKNlfZLC_59kRm2VRNk8T3joTUSsMLQ_R4XUi3mMmNJUWJQ7H3aTcrridHkR_NiX9DeQ7LO0vunVncy5CqHY3ICGJvxDFdh7SVpdLatXEIDMRxvIyVBxU0yocnSRkcUeyUwxaK-9Z7XvZ4OMzxDw" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu6" class="pu"><h1><a href="https://github.com/bsoelch/OneChar.js/blob/main/ItrLang.md" rel="nofollow noreferrer">Itr</a>, 15 bytes</h1>
 <p><code>ê©àé2+à©·+6000m</code></p>
@@ -309,7 +302,7 @@ C3              RET                 ; return to caller
 </code></pre>
 <p>Input string in <code>[SI]</code>, output number of seconds in <code>AX</code>.</p>
 <p>Sample I/O using test program:</p>
-<p><a href="https://i.stack.imgur.com/ZcP0e.png" rel="nofollow noreferrer"><img src="https://i.stack.imgur.com/ZcP0e.png" alt="enter image description here" /></a></p>
+<p><a href="https://i.sstatic.net/ZcP0e.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/ZcP0e.png" alt="enter image description here" /></a></p>
 </div>
 <div id="pu21" class="pu"><h1><a href="https://bitbucket.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 14 bytes</h1>
 <p><strong>Solution:</strong></p>
@@ -348,7 +341,7 @@ C3              RET                 ; return to caller
 <pre><code>=Min(6000,1440*A1
 </code></pre>
 <p>Dividing both <code>6000</code> and <code>1440</code> by 240 saves us 5 bytes inside the <code>Min()</code> function at a cost of only 4 bytes outside of it.</p>
-<p><a href="https://i.stack.imgur.com/CFDGV.png" rel="noreferrer"><img src="https://i.stack.imgur.com/CFDGV.png" alt="enter image description here" /></a></p>
+<p><a href="https://i.sstatic.net/CFDGV.png" rel="noreferrer"><img src="https://i.sstatic.net/CFDGV.png" alt="enter image description here" /></a></p>
 </div>
 <div id="pu24" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow noreferrer">Pyth</a>, <s>16</s> 15 bytes</h1>
 
