--- a/q/274225.html
+++ b/q/274225.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>124</td><td>R</td><td>240718T151236Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274247#274247">Dominic </a></td></tr>
+<tr d-ix="0"><td>108</td><td>R</td><td>240718T151236Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274247#274247">Dominic </a></td></tr>
 <tr d-ix="1"><td>341</td><td>Elisp</td><td>240718T150721Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274246#274246">Samuel J</a></td></tr>
 <tr d-ix="2"><td>099</td><td>JavaScript ES6</td><td>240718T064538Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274234#274234">Arnauld</a></td></tr>
 <tr d-ix="3"><td>096</td><td>Python 3.8 prerelease</td><td>240718T071207Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274237#274237">Jitse</a></td></tr>
@@ -40,10 +40,11 @@
 <tr d-ix="11"><td>055</td><td>Factor + math.combinatorics</td><td>240718T020251Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274227#274227">chunes</a></td></tr>
 <tr d-ix="12"><td>006</td><td>Vyxal</td><td>240718T013914Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274226#274226">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 124 bytes</h1>
-<pre class="lang-r prettyprint-override"><code>\(x,n=sum(x|1),m=t(expand.grid(rep(list(1:n),n))))x[m[,order(apply(m,2,\(v)max(abs(cumsum(x[v])))/(sum(2^v)==2*2^n-2)))[1]]]
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>124</s> 108 bytes</h1>
+<p><em>Edit: -13 bytes thanks to Giuseppe</em></p>
+<pre class="lang-r prettyprint-override"><code>\(x,n=sum(x|1),m=combn(rep(1:n,n),n))x[m[,order(apply(m,2,\(v)max(cumsum(x[v])^2)/(sum(2^v)==2*2^n-2)))[1]]]
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=TU9daoQwEH7vKQJ9mZRJS6IuWkih53CzYFftCiZKjNaFvUlfbKHH6EF6m8afsp2HGeabb75v5v3DTp-l_OpdyeKfyx5GNLLrNYwXTlFLB8XYZia_f7VVDrZooa46B_zRUDTUx5jqFBubFxaytq3PoFHgHgaqsxGylw6OvV700kF5-gPMjTgMVEpxJw6GCY-mXCm13fBdwhG4FwkwxIjSWyKfCDybM1lc6M08ZxGyEBfWxkjnxmMBskgRaCxp3KmwpGvq3lWN6chb5U5kyOq-IMGmEmP4tx4ii9WKJkhCJD6z3b9pggnuVgZHJmY3fvXegO2JaVrrLw" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=TU9rSsQwEP7vKQL-mZEJkrRd2oUInqObQq0tu9AkJX3YBW_inyp4DA_ibexLFIYZ5pvvwby9--mjUp99V_H4uz7BSFa1vYHxVSAZVTjzZMGXDYijJYtz4ZialJx_Lj3kTVNfwZCkEwxo8hGK3qzydNCYSbyHZZPZgErJO5lZLhExFVrrPfOrggLE7BBQSBHiLVMPDB7tla0ReLPceUQ8pJW1M9JlmbGAeKQZOM9cdy49a13ddxdnW_Zy6c5syOu-ZMHuElP4Kw-Jx3pDE2Ihsbnzw79rQgkdNoYgLpc08Ze9A_sT07TNHw" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p><strong>How?</strong></p>
 <ul>
 <li>Get all combinations <code>v</code> of all indices of input <code>x</code> (including re-use of each index, since there isn't an easy base-R command to get permutations).</li>
