--- a/q/235964.html
+++ b/q/235964.html
@@ -108,7 +108,7 @@
 <tr d-ix="79"><td>008</td><td>Charcoal</td><td>211004T081405Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235965#235965">Neil</a></td></tr>
 </table>
 <div id="pu0" class="pu"><h1><a href="https://kotlinlang.org" rel="nofollow noreferrer">Kotlin</a>, <s>59</s> 58 bytes</h1>
-<pre><code>fun h(i:Double):Double=if(i&lt;1)1e0else Math.pow(i,i)*h(i-1)
+<pre class="lang-kotlin prettyprint-override"><code>fun h(i:Double):Double=if(i&lt;1)1e0else Math.pow(i,i)*h(i-1)
 </code></pre>
 <p><a href="https://pl.kotl.in/Y0jyS4Rr8" rel="nofollow noreferrer">Try it online!</a></p>
 <p>Longest submission yet, but thought I might as well give Kotlin a shot. Used the <code>=</code> format for functions to eliminate 2 brackets as well as the <code>return</code>.</p>
